[project]
name = "quickcart"
version = "0.1.0"
description = "QuickCart project"
authors = [
    {name = "User"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "django-tailwind (>=4.0.1,<5.0.0)",
    "django-crum (>=0.7.9,<0.8.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pylint = "^3.3.7"
flake8 = "^7.2.0"
pylint-django = "^2.6.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
